login and ticket submission working!

--- a/app/src/main/res/layout/activity_test_web_info_viewer.xml
+++ b/app/src/main/res/layout/activity_test_web_info_viewer.xml
@@ -5,20 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.russell.myapplication.TestWebInfoViewer">
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/textView"
+    <WebView
+        android:id="@+id/webViewFoo"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"/>
-</ScrollView>
+        android:layout_height="match_parent"/>
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
