finished the bad boi

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,54 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/black"
     tools:context="com.example.russell.myapplication.MainActivity">
 
     <ImageView
-        android:layout_width="550dp"
-        android:layout_height="450dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:srcCompat="@drawable/shichifu50"
         android:id="@+id/shichifu"
         android:layout_centerHorizontal="true"
         android:alpha="0.7"/>
-    <ImageView
-        android:layout_width="350dp"
-        android:layout_height="550dp"
-        app:srcCompat="@android:drawable/screen_background_dark"
-        android:id="@+id/imageView"
-        android:layout_centerHorizontal="true"
-        android:alpha="0.7"
-        android:layout_alignTop="@+id/button"
-        android:layout_marginBottom="160dp" />
-
     <Button
-        android:id="@+id/GoProcess"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:text="Go to image processing"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="166dp" />
-
-    <Button
-        android:text="Settings"
-        android:layout_width="wrap_content"
+        android:text="Account settings"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/goToSettings"
-        tools:layout_editor_absoluteY="169dp"
-        tools:layout_editor_absoluteX="113dp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
-
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/GoProcess"/>
     <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:id="@+id/GoProcess"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Sign In page"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="0dp"
-        android:layout_marginBottom="70dp"
-        android:layout_alignBottom="@+id/goToSettings"
-        android:layout_centerHorizontal="true" />
-
+        android:text="Scan new Lotto ticket"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
